--- a/app/views/bloggers/show.html.erb
+++ b/app/views/bloggers/show.html.erb
@@ -3,3 +3,9 @@
 Name: <%= @blogger.name %><br><br>
 Age: <%= @blogger.age %><br><br>
 Bio: <%= @blogger.bio %><br><br>
+
+Total Blog Likes: 
+<%= @blogger.total_blog_likes %><br><br>
+
+Featured Post:
+<%= link_to @blogger.most_liked_post.title, post_path(@blogger.most_liked_post.id) %>
